tests/fixtures/autofixable/good/custom.py
def my_func():
    my_data = get_my_data()
    return my_data
