tests/fixtures/autofixable/bad/custom.py
def my_func():
    data = get_my_data()
    return data
